-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1
-
None
-
MAC OS X, Windows etc.
-
0d54b0f4ddb3ec3e14f39d954eb43b10100bbce9
When you try to remove non-empty folder using rmdir you get unexpected result: folder will not be deleted, but will not watched, so if you will delete files in this folder - those files still will be displayed.
Problem is here:
QFileSystemModel.cpp, line 1673 (Qt 5.4)
Bar.java
bool QFileSystemModel::rmdir(const QModelIndex &aindex) { QString path = filePath(aindex); #ifndef QT_NO_FILESYSTEMWATCHER QFileSystemModelPrivate * d = const_cast<QFileSystemModelPrivate*>(d_func()); d->fileInfoGatherer.removePath(path); //will remove path from gatherer #endif return QDir().rmdir(path); // can return false and will not remove dir, so this dir will be removed from gatherer but not will be removed from file system }
| For Gerrit Dashboard: QTBUG-49307 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 143595,2 | QFileSystemModel: do not unwatch directories if removal fails | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |